--- a/css/card.css
+++ b/css/card.css
@@ -1,9 +1,25 @@
 @font-face {
-    font-family: 'ocra';
-    src: url("../fonts/ocra-webfont.eot");
-    src: url("../fonts/ocra-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/ocra-webfont.woff") format("woff"), url("../fonts/ocra-webfont.ttf") format("truetype"), url("../fonts/ocra-webfont.svg#ocraregular") format("svg");
+    font-family: 'farrington';
+    src: url("../fonts/Farrington-7B-Qiqi.eot");
+    src: url("../fonts/Farrington-7B-Qiqi.eot?#iefix") format("embedded-opentype"), url("../fonts/Farrington-7B-Qiqi.woff") format("woff"), url("../fonts/Farrington-7B-Qiqi.ttf") format("truetype"), url("../fonts/Farrington-7B-Qiqi.svg#Farrington-7B-Qiqi-") format("svg");
     font-weight: normal;
     font-style: normal
+}
+
+.test {
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+    text-align: center;
+    font-size: 30px;
+    color: #fff;
+    background: #000;
+    text-shadow: 0 1px hsl(0, 0%, 85%),
+    0 2px hsl(0, 0%, 80%),
+    0 3px hsl(0, 0%, 75%),
+    0 4px hsl(0, 0%, 70%),
+    0 5px hsl(0, 0%, 65%),
+    0 5px 10px black;
 }
 
 #result {
@@ -81,23 +97,22 @@
 
 #cardNumber {
     position: relative;
-    font-family: 'ocra', monospace;
-    font-size: 1.8rem;
-    letter-spacing: -0.1rem;
+    font-family: 'farrington', monospace;
+    font-size: 1.2rem;
+    letter-spacing: 0.4rem;
     text-shadow: -0.1rem -0.1rem 0 rgba(255, 255, 255, 0.3), 0.1rem 0.1rem 0 rgba(0, 0, 0, 0.8);
     color: #d7d7d7;
     font-weight: 100;
-    top: 5rem;
+    top: 6.1rem;
 }
 
 #additional {
     position: relative;
-    top: 4.6rem;
+    top: 6.9rem;
 }
 
 #expires {
     position: absolute;
-    top: 0.3rem;
     left: 10rem;
     font-size: 0.5rem;
     width: 2.5rem;
@@ -109,27 +124,32 @@
 #expiryDate {
     position: absolute;
     left: 12rem;
-    font-family: 'ocra', monospace;
-    font-size: 1.1rem;
-    letter-spacing: -0.1rem;
+    top: -0.45rem;
+    font-family: 'farrington', monospace;
+    font-size: 1.4rem;
+    letter-spacing: 0.3rem;
     text-shadow: -0.1rem -0.1rem 0 rgba(255, 255, 255, 0.3), 0.1rem 0.1rem 0 rgba(0, 0, 0, 0.8);
     color: #d7d7d7;
     font-weight: 100;
 }
 
+.separator {
+    position: relative;
+    top: 0.1rem;
+}
+
 #expiryMonth {
+    font-size: 0.9rem;
     padding-left: 1rem;
-    padding-right: 0.2rem;
 }
 
 #expiryYear {
-    padding-left: 0.2rem;
+    font-size: 0.9rem;
     padding-right: 1rem;
 }
 
 #cvv {
     position: absolute;
-    top: 0.3rem;
     left: 18.5rem;
     font-size: 0.5rem;
     width: 1.5rem;
@@ -141,9 +161,9 @@
 #cardCVV {
     position: absolute;
     left: 20rem;
-    font-family: 'ocra', monospace;
-    font-size: 1.1rem;
-    letter-spacing: -0.1rem;
+    font-family: 'farrington', monospace;
+    font-size: 0.9rem;
+    letter-spacing: 0.4rem;
     text-shadow: -0.1rem -0.1rem 0 rgba(255, 255, 255, 0.3), 0.1rem 0.1rem 0 rgba(0, 0, 0, 0.8);
     color: #d7d7d7;
     font-weight: 100;
