--- a/css/card.css
+++ b/css/card.css
@@ -6,6 +6,11 @@
     font-style: normal
 }
 
+body {
+    text-align: center;
+    font-size: 62.5%;
+}
+
 .test {
     width: 100px;
     height: 100px;
@@ -27,11 +32,32 @@
     position: relative;
 }
 
+.visa #logo {
+    background-image: url(/images/visa.png);
+    position: absolute;
+    width: 6.1rem;
+    height: 1.9rem;
+    top: 14.2rem;
+    background-size: cover;
+    margin-left: 21.6rem;
+}
+
+.mastercard #logo {
+    background-image: url(/images/mastercard.png);
+    position: absolute;
+    width: 8rem;
+    height: 5.3rem;
+    top: 12.5rem;
+    background-size: cover;
+    margin-left: 20.6rem;
+}
+
 #creditCard {
     margin: 50px auto 0;
     color: white;
     width: 28.7rem;
     height: 18.2rem;
+    border: 1px solid black;
     -webkit-border-radius: 1rem;
     -moz-border-radius: 1rem;
     border-radius: 1rem;
@@ -150,7 +176,7 @@
 
 #cvv {
     position: absolute;
-    left: 18.5rem;
+    left: 3.5rem;
     font-size: 0.5rem;
     width: 1.5rem;
     text-transform: uppercase;
@@ -160,16 +186,11 @@
 
 #cardCVV {
     position: absolute;
-    left: 20rem;
+    left: 5rem;
     font-family: 'farrington', monospace;
     font-size: 0.9rem;
     letter-spacing: 0.4rem;
     text-shadow: -0.1rem -0.1rem 0 rgba(255, 255, 255, 0.3), 0.1rem 0.1rem 0 rgba(0, 0, 0, 0.8);
     color: #d7d7d7;
     font-weight: 100;
-}
-
-body {
-    text-align: center;
-    font-size: 10px;
 }
